feat: finish discount and activities list
